tests/lustre/typechecking/shouldFail/type-grammer.lus
const n = 11;
const w = 5;

-- node y (const a: int) returns (b: int);
-- let
--   b = a       
-- tel;

node f(const x : int) returns (xb : int^true);
var b: bool^5;
let
  --%PROPERTY b[1] = false;
  b = false ^ x;
tel;
